<resources>
    <string name="app_name">OpenWallet</string>
    <string name="home_title">Good morning</string>
    <string name="home_banner_title"> Gold X NFT - Gold Gift is ready to be redeemed!</string>
    <string name="home_card_title">Learn</string>
    <string name="home_banner_card_title1">What is NFT?</string>
    <string name="home_banner_card_sub_title1">5 min</string>
    <string name="home_banner_card_title2">What is Web 3.0?</string>
    <string name="home_banner_card_title3">Why should you be excited about your NFT?</string>
    <string name="welcome_title">Welcome to  Open</string>
    <string name="welcome_subtitle">Before registering, please keep on hand the email address and mobile phone number connected to your bank account.</string>
    <string name="register_home_subtitle">Creating your account will take less than 5 minutes!</string>
    <string name="bottom_name_home">Home</string>
    <string name="bottom_name_wallet">Wallet</string>
    <string name="bottom_name_marketplace">Marketplace</string>
    <string name="bottom_name_learn">Learn</string>
    <string name="bottom_name_profile">Profile</string>
    <string name="wallet_title"> Open Wallet</string>
    <string name="wallet_own_by">Eligibility: %s</string>
    <string name="wallet_detail_product_details">Gold Gift details</string>
    <string name="redeem_fragment_title">Redeem Gold Gift</string>
    <string name="wallet_detail_key_owned">Owned by </string>
    <string name="walled_detail_redeemed_on">Redeemed on : %s</string>
    <string name="wallet_detail_key_nft_serial_number">NFT serial number</string>
    <string name="walled_detail_tittle">Limited Edition  Gold Coin  </string>
    <string name="wallet_detail_status">Status</string>
    <string name="wallet_redeem_btn_text">Redeem your gift</string>
    <string name="wallet_detail_product_background">Product background</string>
    <string name="wallet_detail_product_background_title">What is Gold Gift NFT?</string>
    <string name="wallet_nft_id_format"> NFT ID: %s</string>
    <string name="wallet_nft_status">NFT status: %s</string>
    <string name="wallet_nft_expiration_date_format">Expiration date: %s</string>
    <string name="wallet_nft_redemption_date_format">Redemption date: %s</string>
    <string name="wallet_nft_record_desc_expired">The section will be updated after you successfully request to redeem your Gold Gift. By doing so, you will also initiate the creation of the NFT for ! \n\nIf you have any queries or feedback about our NFT X Gold campaign or  Open, please contact your relationship manager, or leave a message in our Help center</string>
    <string name="wallet_nft_record_desc_redeemed">Your request to redeem your Gold Gift and initiate the creation of an NFT for  is confirmed. You will be contacted soon to arrange delivery of your Gold Gift. \n\nIf you have any questions, please contact your relationship manager. </string>
    <string name="wallet_detail_product_background_desc">NFTs – or Non-Fungible Tokens – are unique digital assets stored on a blockchain… </string>
    <string name="wallet_detail_product_services">Products &amp; services</string>
    <string name="wallet_detail_about_delivery">About delivery</string>
    <string name="wallet_detail_background_desc">NFTs – or Non-Fungible Tokens – are unique digital assets stored on a blockchain. They are designed to be unique and cannot be exchanged for another equivalent, unlike crypto-assets like Bitcoin or Central Bank Digital Currencies. \n\nThe NFTs can be used to represent distinct goods, such as a land title deed or a particular piece of artwork.  They can be digital proof of ownership or authenticity and can even provide transferability when a physical good/service is not as easily transferable.  \n\nFor this  Open campaign, the NFT does not represent ownership of any good or service and is non-tradable, meaning you will not be able to use or sell it on a crypto exchange. \n\nHowever, you will learn more about NFTs and Web 3.0 and will play a role in ’s creation of an NFT while you redeem your Gold Gift.  \n\n</string>
    <string name="product_detail_key_material">Material</string>
    <string name="product_detail_key_fineness">Fineness</string>
    <string name="product_detail_key_weight">Weight</string>
    <string name="product_detail_info_title">Gold Gift information</string>
    <string name="product_detail_info_desc">Exclusive for you, by  - Gold means wealth as permanence, and a gift for all time to be passed down. Gold is the gift that is not forgotten, but rather becomes the heritage that lasts forever. Gold is the gift with a meaning all its own.</string>
    <string name="redeem_title">Confirm redemption</string>
    <string name="redeem_nft_owner">Redeemed By</string>
    <string name="redeem_phone_number">Mobile phone number</string>
    <string name="redeem_tips">If you have any questions, please contact your relationship manager. </string>
    <string name="redeem_terms">I agree to all the terms and conditions</string>
    <string name="redeem_dialog_title">Cancel Gold X NFT – Gold Gift Redemption? </string>
    <string name="redeem_dialog_content">You are in the midst of requesting delivery of the Gold Gift.  If you cancel now, you will have to submit it again.\n\n</string>
    <string name="session_timeout_dialog_title">TimeOut notification</string>
    <string name="session_timeout_dialog_desc">Your session has expired due to time out</string>
    <string name="view_more">View more</string>
    <string name="redeem">Redeem</string>
    <string name="submit">Submit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="got_it">Got it</string>
    <string name="login">Sign in</string>
    <string name="learn_home_title">Learn list</string>
    <string name="learn_home_complete">complete</string>
    <string name="learn_start_title">Learn detail</string>
    <string name="learn_start_button_start">Start quiz</string>
    <string name="learn_answer_button_submit">Submit</string>
    <string name="learn_answer_button_next">Next</string>
    <string name="learn_answer_wrong_tips">Your answer is wrong, please try again.</string>
    <string name="learn_answer_title">Question</string>
    <string name="learn_answer_complete_title">Congratulations!</string>
    <string name="learn_answer_complete_message">You have successfully entered the luck draw.</string>
    <string name="learn_answer_complete_button">Back to Learn</string>
    <string name="marketplace_coming_soon">Coming soon!</string>
    <string name="wallet_detail_title">Gold X NFT preview</string>
    <string name="wallet_signin">Please Sign in / Sign up</string>
    <string name="wallet_signin_description">Please click the button to sign in or register</string>
    <string name="wallet_go">Go</string>
    <string name="enroll_now">Enroll now</string>
    <string name="start_here">Start here</string>
    <string name="welcome" formatted="false">Welcome, %1$s</string>
    <string name="register">Register</string>
    <string name="username">Username<font color='#FF0000'>*</font></string>
    <string name="next">Next</string>
    <string name="password">Password<font color='#FF0000'>*</font></string>
    <string name="confirm_password">Confirm password<font color='#FF0000'>*</font></string>
    <string name="password_alert">Password must be 8–20 characters, includes at least three of the four types: upper/lower letters, number or symbols.</string>
    <string name="email">Email<font color='#FF0000'>*</font></string>
    <string name="verify_email">Verify email address</string>
    <string name="method_verify_email">Verify by email</string>
    <string name="method_verify_phone">Verify by mobile phone number</string>
    <string name="verification_code">Verification code</string>
    <string name="profile_title">My Profile</string>
    <string name="profile_email_edit">Email</string>
    <string name="profile_password">Password</string>
    <string name="profile_unlogin_warning">Please Log on / Register</string>
    <string name="profile_faq">FAQ</string>
    <string name="profile_edit_profile_title">Edit my profile</string>
    <string name="profile_edit_profile_labelText">Username</string>
    <string name="profile_avatar_title">Select Avatar</string>
    <string name="register_success">Congratulations!</string>
    <string name="register_fail">One or more of the details you entered does not match the information on our records.</string>
    <string name="toolbar_title_delete_profile">Delete profile</string>
    <string name="register_success_detail">You have successfully registered.</string>
    <string name="logon">Log on</string>
    <string name="login_redirect_to_login">Need an account? <u>Sign Up?</u></string>
    <string name="change_password_title">Change password</string>
    <string name="change_password">Verify Identity</string>
    <string name="change_password_complete_message">You have successfully changed your password.</string>
    <string name="password_new">New password<font color='#FF0000'>*</font></string>
    <string name="back_to_my_profile">Back to my Profile</string>
    <string name="notification_title">Notification</string>
    <string name="edit_profile_update">Update changes</string>
    <string name="logout">Log out</string>
    <string name="edit_avatar_selected">Selected</string>
    <string name="wallet_detail_background">Background</string>
    <string name="ad_find_out_more">Find out more</string>
    <string name="ad_title">To celebrate ’s internationalism theme,  is releasing 1,000 pixelated art NFTs</string>
    <string name="ad_content">Download the App, to learn about Web3, and enter a draw to win one of the limited edition NFTs</string>
    <string name="intro_start">Start the quiz</string>
    <string name="banner_title">Learn more about blockchain and win your unique NFT</string>
    <string name="award_title">Congratulations</string>
    <string name="award_content">You\'ve won a very unique  branded NFT.</string>
    <string name="login_start_title">Please log on or register</string>
    <string name="login_start_content">Please click the button to log on or register.</string>
    <string name="login_go">Go</string>
    <string name="login_logon">Log on</string>
    <string name="login_register">Register</string>
    <string name="login_home_title">Good morning</string>
    <string name="login_home_content">Log on to  Open.</string>
    <string name="login_title">Log on</string>
    <string name="login_email">Enter your email</string>
    <string name="login_email_error">We couldn\'t find your email</string>
    <string name="login_password">Enter password</string>
    <string name="login_username_forget">Forgot your username?</string>
    <string name="login_password_error">Invalid password.</string>
    <string name="login_password_forget">Forgotten your password?</string>
    <string name="register_step_title_format">Step %1$s of %2$s: %3$s</string>
    <string name="register_step1_username">Set up username</string>
    <string name="register_step1_username_enter">Enter your username</string>
    <string name="register_step1_username_error">Username already exists.</string>
    <string name="register_step2_password">Set up password</string>
    <string name="register_step2_password_enter">Enter password</string>
    <string name="register_step2_password_info">Password must be 8–20 characters, includes at least three of the four types: upper/lower letters, number or symbols.</string>
    <string name="register_step2_password_confirm">Confirm password</string>
    <string name="register_step2_password_not_match">Password confirmation doesn\'t match.</string>
    <string name="switch_user">Switch user</string>
    <string name="remember_me">Remember me</string>
    <string name="login_consent">By logging on, you agree to the all Terms and Conditions.</string>
</resources>