<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content"
    android:background="?attr/colorMobileDesignBackgroundHighlighted"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.MainActivity">

    <com.openwallet.view.CustomToolBar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAdTitle"
        style="@style/TextAppearance.DisplayEmphasized"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/toolbar"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:text="@string/login_home_title" />

    <!--    **** Replace with your own UI component ****"-->
    <!--    <StandardInputField-->
    <!--        android:id="@+id/sifPassword"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="@dimen/dimen_48dp"-->
    <!--        android:inputType="textPassword"-->
    <!--        app:imageSrc="@drawable/ic_view"-->
    <!--        app:labelText="@string/login_password"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/tvAdTitle"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/tvAdTitle" />-->

    <TextView
        android:id="@+id/tvSwitchUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="@style/TextAppearance.Body"
        android:text="@string/switch_user"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:drawableRight="@drawable/ic_chevron_right"
        android:drawableTint="@color/color_E02020"
        android:drawablePadding="@dimen/dimen_4dp"
        app:layout_constraintStart_toStartOf="@id/sifPassword"
        app:layout_constraintTop_toBottomOf="@+id/sifPassword" />

    <!--    **** Replace with your own UI component ****"-->
    <!--    <PrimaryButton-->
    <!--        android:id="@+id/btnLogin"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="@dimen/dimen_48dp"-->
    <!--        app:layout_constraintEnd_toEndOf="@+id/sifPassword"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/sifPassword"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/tvSwitchUser"-->
    <!--        app:state="disabled"-->
    <!--        app:text="@string/next" />-->

    <TextView
        android:id="@+id/tvForgetPassword"
        style="@style/TextAppearance.BodyEmphasized"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_44dp"
        android:text="@string/login_password_forget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/tvCensent"
        style="@style/TextAppearance.Footnote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_42dp"
        android:gravity="center_horizontal"
        android:text="@string/login_consent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>