<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorMobileDesignBackgroundHighlighted"
    android:fitsSystemWindows="true"
    tools:context=".ui.fragment.welcome.WelcomeFragment">

    <LinearLayout
        android:id="@+id/llWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_home_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:src="@drawable/congratulations" />

        <TextView
            android:id="@+id/tvAdTitle"
            style="@style/TextAppearance.HeadlineEmphasized"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_32dp"
            android:text="@string/welcome_title" />

        <TextView
            android:id="@+id/tvAdContent"
            style="@style/TextAppearance.DisplayTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:text="@string/welcome_subtitle" />

        <TextView
            android:id="@+id/tvFindUsernameTtitle"
            style="@style/TextAppearance.DisplayTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="@dimen/dimen_46dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:text="@string/profile_edit_profile_labelText" />

        <TextView
            android:id="@+id/tvUsername"
            style="@style/TextAppearance.Title1Emphasized"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:visibility="gone" />

    </LinearLayout>


    <!--    **** Replace with your own UI component ****"-->
    <!--    <PrimaryButton-->
    <!--        android:id="@+id/btnAction"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        android:layout_marginBottom="@dimen/dimen_16dp"-->
    <!--        app:state="enabled"-->
    <!--        tools:visibility="visible" />-->

</androidx.constraintlayout.widget.ConstraintLayout>